Fix Coding Standards
