# swagger.json
@@ -61,7 +61,7 @@
             "in": "path",
             "required": true,
             "schema": {
-              "$ref": "#/components/schemas/Seeders"
+              "$ref": "#/components/schemas/SeederEnums"
             }
           },
           {
@@ -138,7 +138,7 @@
     "/api/v1/mq/message/{queueName}": {
       "post": {
         "tags": [
-          "Message Queue: Worker"
+          "Message Queue"
         ],
         "operationId": "SendMessage",
         "parameters": [
@@ -173,7 +173,7 @@
       },
       "get": {
         "tags": [
-          "Message Queue: Worker"
+          "Message Queue"
         ],
         "operationId": "ReceiveSingleMessage",
         "parameters": [
@@ -203,7 +203,7 @@
     "/api/v1/mq/start-worker/{queueName}": {
       "get": {
         "tags": [
-          "Message Queue: Worker"
+          "Message Queue"
         ],
         "operationId": "StartMqComsumer",
         "parameters": [
@@ -233,7 +233,7 @@
     "/api/v1/mq/stop-worker/{consumerTag}": {
       "get": {
         "tags": [
-          "Message Queue: Worker"
+          "Message Queue"
         ],
         "operationId": "StopMqComsumer",
         "parameters": [
@@ -548,7 +548,9 @@
             }
           }
         }
-      },
+      }
+    },
+    "/api/v1/pension/primary-categories": {
       "get": {
         "tags": [
           "Pension: Category Master"
@@ -566,25 +568,6 @@
             }
           }
         }
-      },
-      "patch": {
-        "tags": [
-          "Pension: Category Master"
-        ],
-        "operationId": "GetAllPrimaryCategories",
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/PensionPrimaryCategoryResponseDTOTableResponseDTOJsonAPIResponse"
-                }
-              }
-            }
-          }
-        },
-        "deprecated": true
       }
     },
     "/api/v1/pension/sub-category": {
@@ -624,26 +607,9 @@
             }
           }
         }
-      },
-      "patch": {
-        "tags": [
-          "Pension: Category Master"
-        ],
-        "operationId": "GetAllSubCategories",
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/PensionSubCategoryResponseDTOTableResponseDTOJsonAPIResponse"
-                }
-              }
-            }
-          }
-        },
-        "deprecated": true
-      },
+      }
+    },
+    "/api/v1/pension/sub-categories": {
       "get": {
         "tags": [
           "Pension: Category Master"
@@ -700,43 +666,6 @@
             }
           }
         }
-      },
-      "patch": {
-        "tags": [
-          "Pension: Category Master"
-        ],
-        "operationId": "GetAllCategories",
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/PensionCategoryListDTOTableResponseDTOJsonAPIResponse"
-                }
-              }
-            }
-          }
-        },
-        "deprecated": true
-      },
-      "get": {
-        "tags": [
-          "Pension: Category Master"
-        ],
-        "operationId": "GetCategories",
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/PensionCategoryListDTOTableResponseDTOJsonAPIResponse"
-                }
-              }
-            }
-          }
-        }
       }
     },
     "/api/v1/pension/category/{categoryId}": {
@@ -770,6 +699,26 @@
         }
       }
     },
+    "/api/v1/pension/categories": {
+      "get": {
+        "tags": [
+          "Pension: Category Master"
+        ],
+        "operationId": "GetCategories",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PensionCategoryListDTOTableResponseDTOJsonAPIResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/v1/pension/account-heads": {
       "get": {
         "tags": [
@@ -790,7 +739,7 @@
         }
       }
     },
-    "/api/v1/pension/component": {
+    "/api/v1/pension-component": {
       "post": {
         "tags": [
           "Pension: Component"
@@ -827,26 +776,9 @@
             }
           }
         }
-      },
-      "patch": {
-        "tags": [
-          "Pension: Component"
-        ],
-        "operationId": "GetAllComponents",
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/PensionBreakupResponseDTOTableResponseDTOJsonAPIResponse"
-                }
-              }
-            }
-          }
-        },
-        "deprecated": true
-      },
+      }
+    },
+    "/api/v1/pension-components": {
       "get": {
         "tags": [
           "Pension: Component"
@@ -866,7 +798,7 @@
         }
       }
     },
-    "/api/v1/pension/component-rate": {
+    "/api/v1/pension-component/rate": {
       "post": {
         "tags": [
           "Pension: Component Rate"
@@ -903,28 +835,9 @@
             }
           }
         }
-      },
-      "patch": {
-        "tags": [
-          "Pension: Component Rate"
-        ],
-        "operationId": "GetAllComponentRates",
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ComponentRateResponseDTOTableResponseDTOJsonAPIResponse"
-                }
-              }
-            }
-          }
-        },
-        "deprecated": true
       }
     },
-    "/api/v1/pension/{categoryId}/component-rate": {
+    "/api/v1/pension-component/{categoryId}/rates": {
       "get": {
         "tags": [
           "Pension: Component Rate"
@@ -2305,25 +2218,6 @@
             }
           }
         }
-      },
-      "patch": {
-        "tags": [
-          "Pension: PPO Details"
-        ],
-        "operationId": "GetAllPensioners",
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/PensionerListItemDTOTableResponseDTOJsonAPIResponse"
-                }
-              }
-            }
-          }
-        },
-        "deprecated": true
       },
       "get": {
         "tags": [
@@ -7733,7 +7627,7 @@
         },
         "additionalProperties": false
       },
-      "Seeders": {
+      "SeederEnums": {
         "enum": [
           "DatabaseSeeder",
           "AccountHeadSeeder",
@@ -7781,11 +7675,6 @@
       "TableHeader": {
         "type": "object",
         "properties": {
-          "dataSource": {
-            "type": "object",
-            "additionalProperties": { },
-            "nullable": true
-          },
           "name": {
             "type": "string",
             "nullable": true
